--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,13 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# obj
+*/obj/
+
+# properties
+*/Properties/
+
+# appsettings.json
+
+*/appsettings.json
